--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "isomorphic-unfetch": "^3.0.0",
+    "memoize-one": "^5.1.1",
     "next": "9.1.5",
     "react": "16.12.0",
     "react-dom": "16.12.0"
