--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@zeit/next-source-maps": "0.0.3",
     "gh-pages": "^2.1.1",
     "isomorphic-unfetch": "^3.0.0",
     "memoize-one": "^5.1.1",
